kubernetes/configs/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: coordinator
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coordinator
            port:
              number: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: flink-rest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-first-flink-cluster-rest
            port:
              number: 8081
